--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kbn-app",
+  "name": "kbn-app-api",
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
